--- a/notes-app/package.json
+++ b/notes-app/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "@angular/compiler-cli": "^15.0.0",
     "@ngrx/eslint-plugin": "^14.3.2",
     "@types/jasmine": "~4.3.0",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "5.43.0",
     "@typescript-eslint/parser": "5.43.0",
     "eslint": "^8.28.0",
